--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-dataset.csv
+*.csv
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
